style.css
/* ... */
input[type="checkbox"][role="switch"]::after {
    position: absolute;
    top: -5px;
    left: 1px;
    font-size: 16px;
    content: "\2022";
    color: var(--secondaryBackgroundColour);
    -moz-transform: scale(4);
    zoom: 4;
    transition: 0.5s;
}

input[type="checkbox"][role="switch"]:checked::after {
    left: 10px;
    color: var(--secondaryColour);
}

textarea {
    width: calc(100% - 30px);
    margin: 5px;
    padding: 10px;
    font-size: 16px;
    background-color: white;
    color: black;
    border: none;
    border-radius: 5px;
    resize: none;
}

hr {
    width: calc(100% - 10px);
    border: 2px solid rgba(255, 255, 255, 0.1);
    border-radius: 2px;
}

code {
    font-family: monospace;
    background-color: rgba(255, 255, 255, 0.7);
    color: black;
    border-radius: 2px;
}

pre {
    max-height: 200px;
    padding: 5px;
    background-color: rgba(255, 255, 255, 0.7);
    border-radius: 5px;
    overflow: auto;
    white-space: pre;
    cursor: text;
}

pre code {
    background-color: transparent;
}

embed {
    height: 60vh;
}

aside {
    width: 200px;
    padding-right: 10px;
    float: left;
}

aside a {
    display: block;
    margin-bottom: 5px;
    padding: 5px;
    color: var(--lightMainText);
    border-radius: 5px;
    text-decoration: none;
    transition: 1s background-color;
    overflow: hidden;
    text-overflow: ellipsis;
}

aside a:hover {
    background-color: rgba(255, 255, 255, 0.1);
}

aside a.selected {
    background-color: var(--primaryColour);
    color: var(--lightAccentText);
}

aside + div {
    width: calc(100% - 210px);
    float: right;
}

.floatSpacer {
    clear: both;
}

.desktop {
    display: unset;
}

.mobile {
    display: none;
}

.notSignedIn {
    display: none;
}

.signedIn {
    display: none;
}

.notAdmin {
    display: none;
}

.notAdminSpan {
    display: none;
}

.admin {
    display: none;
}

.adminSpan {
    display: none;
}

.proOnly {
    display: none;
}

.tempHidden {
    display: none;
}

.left {
    text-align: left!important;
}

.center {
    text-align: center!important;
}

.right {
    text-align: right!important;
}

.floatLeft {
    float: left!important;
}

.floatRight {
    float: right!important;
}

.displayNone {
    display: none;
}

.noMargin {
    margin: 0;
}

.marginBottomOnly {
    margin: 0;
    margin-bottom: 10px;
}

.cutOff {
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
}

.monospace {
    font-family: "Roboto Mono", monospace;
}

.dialogBackground {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    z-index: 3;
    background-color: rgba(107, 41, 239, 0.5);
}

.dialog {
    display: none;
    position: fixed;
    top: 30vh;
    left: 30vw;
    width: calc(40vw - 20px);
    height: calc(40vh - 20px);
    z-index: 4;
    padding: 10px;
    background-color: var(--primaryBackgroundColour);
    color: var(--lightMainText);
    border-radius: 5px;
}

.dialogTitle {
    margin: -10px;
    padding: 10px;
    font-size: 20px;
    background-color: var(--primaryColour);
    color: var(--lightAccentText);
    border-radius: 5px 5px 0 0;
}

.dialogContent {
    margin: -10px;
    margin-top: 10px;
    padding: 10px;
    width: 100%;
    height: calc(100% - 110px);
    overflow-y: auto;
}

.dialogActions {
    margin: -10px;
    margin-top: 10px;
    padding: 10px;
    width: 100%;
    height: 45px;
    text-align: right;
}

.cover {
    width: calc(80vw + 3px);
    height: calc(100vh - 200px);
    margin: -8px;
    padding: 10%;
    padding-top: 100px;
    padding-bottom: 100px;
    background-color: var(--primaryColour);
}

.card {
    margin-bottom: 10px;
    padding: 10px;
    background-color: rgba(255, 255, 255, 0.1);
    border-radius: 5px;
}

.centre-card {
    margin-bottom: 10px;
    padding: 10px;
    background-color: rgba(255, 255, 255, 0.1);
    border-radius: 5px;
    align-content: center;
    text-align: center;
}

.card.coloured {
    background-color: var(--primaryColour);
}

.card.profile {
    height: 80px;
}

.card.highlight {
    background-color: var(--highlightColour);
    color: black;
}

.card.adminBanner {
    display: none;
    background-color: var(--highlightColour);
    color: black;
}

.card.search {
    background-color: transparent;
    margin: -5px;
    margin-bottom: 5px;
    padding: 0;
}

.card.motd {
    background-color: transparent;
    margin: -5px;
    margin-bottom: -50px;
    padding: 0;
}

.card img.cardHeader {
    margin: -10px;
    margin-bottom: 0;
    border-radius: 5px 5px 0 0;
}

.balloonTarget {
    position: relative;
}

.balloon {
    position: absolute;
    top: -220px;
    width: calc(300px - 10px);
    height: calc(200px - 10px);
    padding: 5px;
    background-color: var(--primaryColour);
    color: var(--lightAccentText);
    border-radius: 5px;
    text-align: left;
}

.balloon h2 {
    margin-top: 5px;
}

.balloonButtons {
    position: absolute;
    top: 146px;
}

.balloon::before {
    position: absolute;
    top: 200px;
    border-top: 18px solid var(--primaryColour);
    border-left: 10px solid transparent;
    border-right: 10px solid transparent;
    content: "";
}

.balloon.xrun {
    right: 25px;
}

.balloon.xrun::before {
    right: 50px;
}

.itemHolder {
    margin-left: -5px;
    margin-right: -6px;
    overflow: auto;
}

.item {
    width: calc(33.3% - 30px);
    margin: 5px;
    padding: 10px;
    float: left;
    background-color: rgba(255, 255, 255, 0.1);
    border-radius: 5px;
}

.item.coloured {
    background-color: var(--primaryColour);
}

.itemThumbnailHolder {
    height: 15vw;
    overflow: hidden;
    margin: -10px;
    margin-bottom: 0px;
    border-radius: 5px 5px 0 0;
}

.itemThumbnail {
    width: calc(100% + 20px);
    margin: -10px;
    border-radius: 5px 5px 0 0;
}

.itemTitle {
    margin: 5px;
}

.featureItem {
    min-height: 165px;
}

.featureLogo {
    font-size: 50px;
    color: #999999;
}
/* ... */

